examples/errors/duplicate_name.ik
fn foo() {
}

fn foo() {
}

fn main() {
}
